Update twig block

--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row">
             <div>
-                <a href="#" class="btn btn-secondary mb-3 mt-3">Create New</a>
+                <a href="{{ path('app_food_new') }}" class="btn btn-secondary mb-3 mt-3">Create New</a>
             </div>
             {% for index in food %}
                 <div class="col-md-4">
