--- a/templates/food/new.html.twig
+++ b/templates/food/new.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'content_base.html.twig' %}
 
-{% block body %}
+{% block content_body %}
     {{ include('food/_form.html.twig',{button_text: 'Create'}) }}
 {% endblock %}
