--- a/templates/product/edit.html.twig
+++ b/templates/product/edit.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
+{% extends 'content_base.html.twig' %}
 
-{% block body %}
+{% block content_body %}
     {{ include('product/_form.html.twig',{button_text: 'Edit'}) }}
 {% endblock %}
